Index: ChangeLog 2002-11-08  Geoffrey Keating  <geoffk@apple.com>
	* c-pch.c (c_common_write_pch): Write the macro definitions after
	the GCed data.
	(c_common_read_pch): Call cpp_prepare_state.  Restore the macro
	definitions after the GCed data.
	* cpplib.c (save_macros): New.
	(reset_ht): New.
	(cpp_write_pch_deps): Split out of cpp_write_pch.
	(cpp_write_pch_state): Split out of cpp_write_pch.
	(cpp_write_pch): Delete.
	(struct save_macro_data): Delete.
	(cpp_prepare_state): New.
	(cpp_read_state): Erase and restore initial macro definitions.
	* cpplib.h (struct save_macro_data): Forward-declare.
	(cpp_write_pch_deps): Prototype.
	(cpp_write_pch_state): Prototype.
	(cpp_write_pch): Delete prototype.
	(cpp_prepare_state): Prototype.
	(cpp_read_state): Add fourth argument.

Index: testsuite/ChangeLog
2002-11-08  Geoffrey Keating  <geoffk@apple.com>

	* gcc.dg/pch/macro-3.c: New.
	* gcc.dg/pch/macro-3.h: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/pch-branch@58943 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,24 @@
+2002-11-08  Geoffrey Keating  <geoffk@apple.com>
+
+	* c-pch.c (c_common_write_pch): Write the macro definitions after
+	the GCed data.
+	(c_common_read_pch): Call cpp_prepare_state.  Restore the macro
+	definitions after the GCed data.
+	* cpplib.c (save_macros): New.
+	(reset_ht): New.
+	(cpp_write_pch_deps): Split out of cpp_write_pch.
+	(cpp_write_pch_state): Split out of cpp_write_pch.
+	(cpp_write_pch): Delete.
+	(struct save_macro_data): Delete.
+	(cpp_prepare_state): New.
+	(cpp_read_state): Erase and restore initial macro definitions.
+	* cpplib.h (struct save_macro_data): Forward-declare.
+	(cpp_write_pch_deps): Prototype.
+	(cpp_write_pch_state): Prototype.
+	(cpp_write_pch): Delete prototype.
+	(cpp_prepare_state): Prototype.
+	(cpp_read_state): Add fourth argument.
+
 2002-11-04  Geoffrey Keating  <geoffk@apple.com>
 
 	* gengtype.c (adjust_field_rtx_def): Don't use skip on valid fields.
