--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2002-11-08  Neil Booth  <neil@daikokuya.co.uk>
+
+	* MAINTAINERS: Fix email address.
+
+2002-11-05  Nick Clifton  <nickc@redhat.com>
+
+	* MAINTAINERS: Fix typo in my email address.
+
+2002-11-05  Paolo Carlini  <pcarlini@unitus.it>
+
+	* MAINTAINERS (Write After Approval): Remove myself.
+	(Various Maintainers: c++ runtime libs): Add myself.
+
 2002-10-07  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* Makefile.in (CFLAGS_FOR_TARGET): Add -O2.
