--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2002-11-09  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* configure: Remove 'removing', which doesn't work.  Replace $subdir 
+	with . everywhere.  Replace $subdirs with ''.  Replace $makesrcdir 
+	with $srcdir.  Reformat indentation.  Substitute some variables 
+	formerly hard-coded in the Makefile for build=host.
+	* Makefile.tpl: Autogenerate more; make more autoconf-friendly.
+	* Makefile.def: Autogenerate more.
+	* Makefile.in: Regenerate.
+
 2002-11-04  Adam Nemet  <anemet@lnxw.com>
 
 	* MAINTAINERS (Write After Approval): Add myself.
