* contrib/gthr_supp_vxw_5x.c: New file. 	* gcc/doc/install.texi: Add *-*-vxworks* specific installation 	instructions.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@58966 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,8 @@
 2002-11-09  Zack Weinberg  <zack@codesourcery.com>
 
+	* doc/install.texi: Add *-*-vxworks* specific installation
+	instructions.
+
 	* config/vxlib.c: Rewrite using generation numbers to identify
 	valid TSD keys.
 
