* varasm.c (output_addressed_constants) [MINUS_EXPR]: Clear reloc if 	both operands contain local relocations. 	* config/elfos.h (SELECT_SECTION): Don't use mergeable sections if 	initializer has any relocations. 	* config/alpha/elf.h (SELECT_SECTION): Likewise. 	* config/ia64/sysv4.h (DO_SELECT_SECTION): Likewise.
	* gcc.dg/20021029-1.c: New test.
	* gcc.dg/20021029-2.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_2-rhl8-branch@58979 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2002-11-10  Jakub Jelinek  <jakub@redhat.com>
+
+	* varasm.c (output_addressed_constants) [MINUS_EXPR]: Clear reloc if
+	both operands contain local relocations.
+	* config/elfos.h (SELECT_SECTION): Don't use mergeable sections if
+	initializer has any relocations.
+	* config/alpha/elf.h (SELECT_SECTION): Likewise.
+	* config/ia64/sysv4.h (DO_SELECT_SECTION): Likewise.
+
 2002-11-08  H.J. Lu <hjl@gnu.org>
 
 	Fix c/5351 and optimization/7591.
