--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-11-10  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* configure: Add support for extra required flags for ar or nm.
+	* configure.in (aix4.3+): Use above support for target-specific 
+	issues, rather than using config/mt-aix43.
+
 2002-11-09  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* configure: Remove 'removing', which doesn't work.  Replace $subdir 
