--- a/fastjar/ChangeLog
+++ b/fastjar/ChangeLog
@@ -1,7 +1,75 @@
+2002-11-10  Jakub Jelinek  <jakub@redhat.com>
+
+	* jartool.c (add_to_jar): Only compare file to jarfile if jarfile is
+	non-NULL.
+
+	* configure.in (AC_CHECK_HEADERS): Add limits.h.
+	* configure, config.h.in: Rebuilt.
+
 2002-11-07  Tom Tromey  <tromey@redhat.com>
 
 	* dostime.c: Rewrote from scratch.
 	* dostime.h (dostime): Removed.
+
+2002-10-20  Tom Tromey  <tromey@redhat.com>
+
+	* jartool.c: Use mode 0666 when opening new file.
+
+2002-10-15  Ranjit Mathew  <rmathew@hotmail.com>
+
+	* configure, config.h.in: Rebuilt.
+	* configure.in: Call gcc_AC_FUNC_MKDIR_TAKES_ONE_ARG.
+
+2002-09-11  Tom Tromey  <tromey@redhat.com>
+
+	* Makefile.in: Rebuilt.
+	* Makefile.am (TEXINFO_TEX): New macro.
+	(info_TEXINFOS): Likewise.
+	(fastjar_TEXINFOS): Likewise.
+	(man_MANS): Likewise.
+	(EXTRA_DIST): Likewise.
+	(my_makei_flags): Likewise.
+	(fastjar.info): New rule.
+	(fastjar_TEXINFOS): Don't mention `$(srcdir)'.
+	(TEXINFO_TEX): Likewise.
+	(AUTOMAKE_OPTIONS): Added `cygnus'.
+
+2002-09-11  Matthias Klose  <doko@debian.org>
+
+	* Makefile.am: Revert the previous patch.
+	* Makefile.in: Regenerated.
+
+2002-09-10  Matthias Klose  <doko@debian.org>
+
+	* fastjar.texi: New.
+	* Makefile.am: Support building info docs and manpages.
+	* Makefile.in: Regenerated.
+	* configure.in: Set gcc_version.
+	* configure: Regenerated.
+	* jargrep.c: Update usage and help strings.
+
+2002-09-09  Tom Tromey  <tromey@redhat.com>
+
+	* jartool.c (mkdir): Define.
+	* config.h.in: Rebuilt.
+	* aclocal.m4, configure: Rebuilt.
+	* acinclude.m4: New file.  Copied gcc_AC_COMPILE_CHECK_SIZEOF,
+	gcc_AC_EXAMINE_OBJECT, and fastjar_AC_COMPILE_C_BIGENDIAN from
+	aclocal.m4.
+
+2002-09-04  Tom Tromey  <tromey@redhat.com>
+
+	From greenrd@hotmail.com:
+	* jartool.c (list_jar): Correctly determine when new `filename'
+	buffer must be allocated.  Fixes PR java/7830.
+
+2002-06-03  Geoffrey Keating  <geoffk@redhat.com>
+
+	* configure.in: Support cross-compiling.
+	* configure: Regenerate.
+	* aclocal.m4 (gcc_AC_COMPILE_CHECK_SIZEOF): New.
+	(gcc_AC_EXAMINE_OBJECT): New.
+	(fastjar_AC_COMPILE_C_BIGENDIAN): New.
 
 2002-08-14  Release Manager
 
