* gcc.dg/pch/pch.exp: Compare .s files with/without PCH, 	rather than trying to build and run a program using PCH. 	* gcc.dg/pch: Remove dg-do commands from test files.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/pch-branch@59031 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2002-11-11  Geoffrey Keating  <geoffk@apple.com>
+
+	* gcc.dg/pch/pch.exp: Compare .s files with/without PCH,
+	rather than trying to build and run a program using PCH.
+	* gcc.dg/pch: Remove dg-do commands from test files.
+	
 2002-11-08  Geoffrey Keating  <geoffk@apple.com>
 
 	* gcc.dg/pch/macro-3.c: New.
