* configure.in (v810*): Remove special setting of tools.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@59038 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2002-11-10  Nathanael Nerode  <neroden@gcc.gnu.org>
 
+	* configure.in (v810*): Remove special setting of tools.
+
 	* configure: Add support for extra required flags for ar or nm.
 	* configure.in (aix4.3+): Use above support for target-specific 
 	issues, rather than using config/mt-aix43.
