--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-11-12  Nathanael Nerode  <neroden@gcc.gnu.org>
+
+	* configure: More autoconf-style substitutions.
+	* Makefile.tpl: More autoconf-style substitutions.
+	* Makefile.in: Regenerate.
+
 2002-11-11  Nathanael Nerode  <neroden@gcc.gnu.org>
 
 	* configure: Substitute more variables in a more autoconf-friendly
