2002-11-12  Devang Patel <dpatel@apple.com> 	* gcc.c (display_help): Two new options -Xpreprocessor and 	-Xassembler 	(process_command): Same. 	* doc/invoke.texi: Info about these two new options.
git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/gcc-3_4-basic-improvements-branch@59091 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2002-11-12  Devang Patel <dpatel@apple.com>
+	*gcc.c (display_help): Two new options -Xpreprocessor and -Xassembler.
+	(process_command): Same.
+	*doc/invoke.texi: Info about these two new options.
+	
 2002-11-09  Zack Weinberg  <zack@codesourcery.com>
 
 	* doc/install.texi: Add *-*-vxworks* specific installation
