--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2002-07-23  Andreas Schwab  <schwab@suse.de>
+
+	* 7sosprim.adb (time_t): Change to Long_Integer.
+	(struct_timeval): Change tv_usec to Long_Integer.
+
 2002-03-12  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* misc.c (gnat_tree_code_type, gnat_tree_code_length,
