--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -4553,6 +4553,16 @@
   [(set_attr "type" "sseicvt")
    (set_attr "athlon_decode" "double,vector")])
 
+;; Avoid vector decoded form of the instruction.
+(define_peephole2
+  [(match_scratch:SF 2 "x")
+   (set (match_operand:DI 0 "register_operand" "")
+	(fix:DI (match_operand:SF 1 "nonimmediate_operand" "")))]
+  "TARGET_K8 && !optimize_size"
+  [(set (match_dup 2) (match_dup 1))
+   (set (match_dup 0) (fix:DI (match_dup 2)))]
+  "")
+
 (define_insn "fix_truncdfdi_sse"
   [(set (match_operand:DI 0 "register_operand" "=r,r")
 	(fix:DI (match_operand:DF 1 "nonimmediate_operand" "Y,Ym")))]
@@ -4560,6 +4570,16 @@
   "cvttsd2si{q}\t{%1, %0|%0, %1}"
   [(set_attr "type" "sseicvt,sseicvt")
    (set_attr "athlon_decode" "double,vector")])
+
+;; Avoid vector decoded form of the instruction.
+(define_peephole2
+  [(match_scratch:DF 2 "Y")
+   (set (match_operand:DI 0 "register_operand" "")
+	(fix:DI (match_operand:DF 1 "nonimmediate_operand" "")))]
+  "TARGET_K8 && !optimize_size"
+  [(set (match_dup 2) (match_dup 1))
+   (set (match_dup 0) (fix:DI (match_dup 2)))]
+  "")
 
 ;; Signed conversion to SImode.
 
@@ -4663,6 +4683,16 @@
   [(set_attr "type" "sseicvt")
    (set_attr "athlon_decode" "double,vector")])
 
+;; Avoid vector decoded form of the instruction.
+(define_peephole2
+  [(match_scratch:SF 2 "x")
+   (set (match_operand:SI 0 "register_operand" "")
+	(fix:SI (match_operand:SF 1 "nonimmediate_operand" "")))]
+  "TARGET_K8 && !optimize_size"
+  [(set (match_dup 2) (match_dup 1))
+   (set (match_dup 0) (fix:SI (match_dup 2)))]
+  "")
+
 (define_insn "fix_truncdfsi_sse"
   [(set (match_operand:SI 0 "register_operand" "=r,r")
 	(fix:SI (match_operand:DF 1 "nonimmediate_operand" "Y,Ym")))]
@@ -4670,6 +4700,16 @@
   "cvttsd2si\t{%1, %0|%0, %1}"
   [(set_attr "type" "sseicvt")
    (set_attr "athlon_decode" "double,vector")])
+
+;; Avoid vector decoded form of the instruction.
+(define_peephole2
+  [(match_scratch:DF 2 "Y")
+   (set (match_operand:SI 0 "register_operand" "")
+	(fix:SI (match_operand:DF 1 "nonimmediate_operand" "")))]
+  "TARGET_K8 && !optimize_size"
+  [(set (match_dup 2) (match_dup 1))
+   (set (match_dup 0) (fix:SI (match_dup 2)))]
+  "")
 
 (define_split 
   [(set (match_operand:SI 0 "register_operand" "")
