--- a/gcc/config/i386/i386.md
+++ b/gcc/config/i386/i386.md
@@ -4557,7 +4557,7 @@
 (define_peephole2
   [(match_scratch:SF 2 "x")
    (set (match_operand:DI 0 "register_operand" "")
-	(fix:DI (match_operand:SF 1 "nonimmediate_operand" "")))]
+	(fix:DI (match_operand:SF 1 "memory_operand" "")))]
   "TARGET_K8 && !optimize_size"
   [(set (match_dup 2) (match_dup 1))
    (set (match_dup 0) (fix:DI (match_dup 2)))]
@@ -4575,7 +4575,7 @@
 (define_peephole2
   [(match_scratch:DF 2 "Y")
    (set (match_operand:DI 0 "register_operand" "")
-	(fix:DI (match_operand:DF 1 "nonimmediate_operand" "")))]
+	(fix:DI (match_operand:DF 1 "memory_operand" "")))]
   "TARGET_K8 && !optimize_size"
   [(set (match_dup 2) (match_dup 1))
    (set (match_dup 0) (fix:DI (match_dup 2)))]
@@ -4687,7 +4687,7 @@
 (define_peephole2
   [(match_scratch:SF 2 "x")
    (set (match_operand:SI 0 "register_operand" "")
-	(fix:SI (match_operand:SF 1 "nonimmediate_operand" "")))]
+	(fix:SI (match_operand:SF 1 "memory_operand" "")))]
   "TARGET_K8 && !optimize_size"
   [(set (match_dup 2) (match_dup 1))
    (set (match_dup 0) (fix:SI (match_dup 2)))]
@@ -4705,7 +4705,7 @@
 (define_peephole2
   [(match_scratch:DF 2 "Y")
    (set (match_operand:SI 0 "register_operand" "")
-	(fix:SI (match_operand:DF 1 "nonimmediate_operand" "")))]
+	(fix:SI (match_operand:DF 1 "memory_operand" "")))]
   "TARGET_K8 && !optimize_size"
   [(set (match_dup 2) (match_dup 1))
    (set (match_dup 0) (fix:SI (match_dup 2)))]
